<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/user"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:orientation="vertical">

        <EditText
            android:drawableStart="@drawable/baseline_account_box_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_username"
            android:hint="@string/Usuario"
            android:text="Admin"
            android:gravity="center"/>

        <EditText
            android:drawableStart="@drawable/baseline_lock_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_password"
            android:hint="@string/Senha"
            android:inputType="textPassword"
            android:text="password"
            android:gravity="center"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permanecer_o_login"
            android:id="@+id/checkBox_logged" />
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/button_login" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/n_o_tem_uma_conta_registre_se"
        android:gravity="center"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/RecoverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/esqueceu_a_senha"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_above="@+id/text_register" />

</RelativeLayout>